--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
         <hr class="d-print-none" />
         <div class="work-experience-section px-3 px-lg-4">
-          <h2 class="h3 mb-4" id="job">Job Experience</h2>
+          <h2 class="h3 mb-4" id="job">Experiencia Laboral</h2>
           <div class="timeline">
             <div class="timeline-card timeline-card-primary card shadow-sm">
               <div class="card-body">
@@ -265,7 +265,7 @@
 
         <hr class="d-print-none" />
         <div class="project-section px-3 px-lg-4">
-          <h2 class="h3 mb-4" id="project">Projects</h2>
+          <h2 class="h3 mb-4" id="project">Proyectos personales</h2>
           <div class="timeline">
             <div class="timeline-card timeline-card-primary card shadow-sm">
               <div class="card-body">
