--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
             <div class="col-lg">
               <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Sobre mi</h2>
               <p data-aos="fade-left" data-aos-delay="100">
-                Actualmente estudio Ciencias de la Computación en la Universidad Peruana de Ciencias Aplicadas (UPC),
-                voy en 8vo ciclo.
-                Estoy interesado en el área de Data Science y Desarrollo Web.
-                Con ganas de aplicar mis conocimientos, y dispuesto a aprender de otros profesionales y ganar
-                experiencia.
+                Actualmente estudio en la Universidad Peruana de Ciencias Aplicadas (UPC), sigo la carrera
+de Ciencias de la Computación y voy en 8vo ciclo. Estoy interesado en el área de Data Science
+y Desarrollo Web. Con ganas de aplicar mis conocimientos, y dispuesto a aprender de otros
+profesionales.
               </p>
             </div>
           </div>
@@ -76,11 +75,11 @@
         <div class="about-section pt-4 px-3 px-lg-4 mt-1">
           <div class="row">
             <div class="col-md-6">
-              <h2 class="h3 mb-3">Objetivos</h2>
+              <h2 class="h3 mb-3">Objetivo</h2>
               <p>
                 Estoy en busca de prácticas preprofesionales en el rol de Data Scientist o
-                Desarrollo Web para aplicar mis conocimientos teóricos y prácticos en casos reales, y comenzar a ganar
-                experiencia.
+Desarrollo Web para aplicar mis conocimientos teóricos y prácticos en casos
+reales.
               </p>
             </div>
             <div class="col-md-6">
@@ -91,7 +90,7 @@
                     <div class="pb-1">Email</div>
                   </div>
                   <div class="col">
-                    <div class="pb-1 text-secondary">ozemblem66@gmail.com</div>
+                    <div class="pb-1 text-secondary">hernan.razo.ballon@gmail.com</div>
                   </div>
                 </div>
                 <div class="row">
@@ -256,7 +255,7 @@
                   de software para el área de banca
                   y telecomunicaciones. <br><br>
                   Ocupe el puesto de Programador 1 de desarrollo web usando Angular y Spring
-                  Boot
+                  Boot, Docker y SQL
                   para trabajar Frontend y Backend respectivamente.</div>
               </div>
             </div>
@@ -336,16 +335,21 @@
                 <div class="text-muted text-small mb-2">Diciembre, 2021
                 </div>
                 <div>
-                  <p>Formulario Web para predecir las probabilidades de estar infectado de Covid-19.<br>
-                  </p>
-                  <p>El Frontend y Backend fueron desarrollados con el framework Vue y el lenguaje Go respectivamente.</p>
-
+                  <p>Formulario Web, desarrollado con Vue y el lenguaje Go, para predecir la probabilidad de estar infectado de Covid-19 basado en data historica recopilada por el gobierno del Perú.</p>
+                  <p>Para ello se uso el algoritmo Random Forest, Docker y Maquins Virtuales de Azure</p>
+                  <p>El formulario consiste de marcar checkbox para saber si el usuario tiene sintomas como:</p>
+                  <ul>
+                    <li>Tos</li>
+                    <li>Dolor de garganta</li>
+                    <li>Dolor muscular</li>
+                  </ul>
+                  Al dar click en el boton "Diagnosticar", la aplicación dirá si el usuario seria negativo o positivo de covid-19
                   <div class="row">
                     <div class="col">
                   <p>Repositorio Github del proyecto: </p>
                 </div>
                 <div class="col">
-                  <a href="https://github.com/tf-concurrencia" target="_blank">
+                  <a href="https://github.com/tf-concurrencia/C19-DetectFrontend" target="_blank">
                     <img src="https://blog.golang.org/go-brand/Go-Logo/PNG/Go-Logo_Aqua.png" height="32" width="32" alt="Icono de Go">
                   </a>
                 </div>
