primer lote de correcciones

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Right Resume</title>
+  <title>Hernan Razo - Resume</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
   <link rel="preload" as="style"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" />
@@ -28,6 +29,7 @@
     </style>
   </noscript>
 </head>
+
 <body id="top">
   <header class="d-print-none">
     <div class="container text-center text-lg-left">
@@ -45,10 +47,6 @@
       <div class="cover shadow-lg bg-white">
         <div class="cover-bg p-3 p-lg-4 text-white">
           <div class="row">
-            <!--
-        <div class="col-lg-4 col-md-5">
-        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200"/></div></div>
-      -->
             <div class="col-lg col-md-7 text-center text-md-start">
               <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Hernan Razo</h2>
               <p data-aos="fade-left" data-aos-delay="100">Web Developer & Data Scientist</p>
@@ -65,34 +63,36 @@
               <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Sobre mi</h2>
               <p data-aos="fade-left" data-aos-delay="100">
                 Actualmente estudio en la Universidad Peruana de Ciencias Aplicadas (UPC), sigo la carrera
-de Ciencias de la Computación y voy en 8vo ciclo. Estoy interesado en el área de Data Science
-y Desarrollo Web. Con ganas de aplicar mis conocimientos, y dispuesto a aprender de otros
-profesionales.
+                de Ciencias de la Computación y voy en 8vo ciclo. Estoy interesado en el área de Data Science
+                y Desarrollo Web. Con ganas de aplicar mis conocimientos, y dispuesto a aprender de otros
+                profesionales.
               </p>
             </div>
           </div>
         </div>
-        <div class="about-section pt-4 px-3 px-lg-4 mt-1">
+        <div class="about-section pt-4 px-3 px-lg-4 mt-3">
           <div class="row">
             <div class="col-md-6">
               <h2 class="h3 mb-3">Objetivo</h2>
               <p>
                 Estoy en busca de prácticas preprofesionales en el rol de Data Scientist o
-Desarrollo Web para aplicar mis conocimientos teóricos y prácticos en casos
-reales.
+                Desarrollo Web para aplicar mis conocimientos teóricos y prácticos en casos
+                reales.
               </p>
             </div>
             <div class="col-md-6">
               <h2 class="h3 mb-3">Contactame</h2>
               <div class="row mt-2">
+
                 <div class="row">
                   <div class="col">
                     <div class="pb-1">Email</div>
                   </div>
                   <div class="col">
-                    <div class="pb-1 text-secondary">hernan.razo.ballon@gmail.com</div>
+                    <div style="font-size: 15px;" class="pb-1 text-secondary">hernan.razo.ballon@gmail.com</div>
                   </div>
                 </div>
+
                 <div class="row">
                   <div class="col">
                     <div class="pb-1">Celular</div>
@@ -168,33 +168,10 @@ reales.
                     aria-valuemax="100"></div>
                 </div>
               </div>
-              <h5 class="h5 mb-3">Web Developer</h5>
-              <div class="mb-2"><span>Angular(Typescript, HTML, CSS)</span>
-                <div class="progress my-1">
-                  <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400"
-                    data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="90" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </div>
-              <div class="mb-2"><span>Spring Boot(Java)</span>
-                <div class="progress my-1">
-                  <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500"
-                    data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </div>
-              <div class="mb-2"><span>Docker</span>
-                <div class="progress my-1">
-                  <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500"
-                    data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </div>
-
             </div>
+
             <div class="col-md-6">
               <h5 class="h5 mb-3">Soft Skills</h5>
-
               <div class="mb-2"><span>Fast Learner</span>
                 <div class="progress my-1">
                   <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100"
@@ -217,7 +194,33 @@ reales.
                 </div>
               </div>
 
-              <h5 class="h5 mb-3">&nbsp;</h5>
+            </div>
+            <h5 class="h5 mb-3">Web Developer</h5>
+            <div class="col-md-6">
+              <div class="mb-2"><span>Angular(Typescript, HTML, CSS)</span>
+                <div class="progress my-1">
+                  <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400"
+                    data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="90" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="mb-2"><span>Spring Boot(Java)</span>
+                <div class="progress my-1">
+                  <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500"
+                    data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="mb-2"><span>Docker</span>
+                <div class="progress my-1">
+                  <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500"
+                    data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
               <div class="mb-2"><span>SQL</span>
                 <div class="progress my-1">
                   <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100"
@@ -268,11 +271,13 @@ reales.
           <div class="timeline">
             <div class="timeline-card timeline-card-primary card shadow-sm">
               <div class="card-body">
-                <div class="h5 mb-1">Dashboard en R sobre análisis de casos de contagiados positivos y fallecidos por covid-19 durante el mes de noviembre de 2020.</div>
+                <div class="h5 mb-1">Dashboard en R sobre análisis de casos de contagiados positivos y fallecidos por
+                  covid-19 durante el mes de noviembre de 2020.</div>
                 <div class="text-muted text-small mb-2">Noviembre, 2020
                 </div>
                 <div>
-                  <p>Se Desplego una plataforma de soporte a proyectos en ciencia de los datos usando Maquinas Virtuales de AWS y el lenguajde de progrmaación R.
+                  <p>Se Desplego una plataforma de soporte a proyectos en ciencia de los datos usando Maquinas Virtuales
+                    de AWS y el lenguajde de progrmaación R.
                   </p>
                   <p>El Dashboard muestra consultas como</p>
                   <ul>
@@ -282,15 +287,14 @@ reales.
                   </ul>
                   <div class="row">
                     <div class="col">
-                  <p>Repositorio Github del proyecto: </p>
-                </div>
-                <div class="col">
-                  <a href="https://github.com/BrujitoOz/TFAdminInfo" target="_blank">
-                    <img src="https://www.r-project.org/logo/Rlogo.png" alt="Icono de R" width="32"
-                    height="32">
-                  </a>
-                </div>
-                </div>
+                      <p>Repositorio Github del proyecto: </p>
+                    </div>
+                    <div class="col">
+                      <a href="https://github.com/BrujitoOz/TFAdminInfo" target="_blank">
+                        <img src="https://www.r-project.org/logo/Rlogo.png" alt="Icono de R" width="32" height="32">
+                      </a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -299,11 +303,13 @@ reales.
           <div class="timeline">
             <div class="timeline-card timeline-card-primary card shadow-sm">
               <div class="card-body">
-                <div class="h5 mb-1">AdoptMeYa’s Frontend: Aplicación para adopción y publicación de mascotas perdidas</div>
+                <div class="h5 mb-1">AdoptMeYa’s Frontend: Aplicación para adopción y publicación de mascotas perdidas
+                </div>
                 <div class="text-muted text-small mb-2">Septiembre, 2021 - Noviembre, 2021
                 </div>
                 <div>
-                  <p>Proyecto creado con angular para realizar publicaciones ya sea para poner en adopción a una mascota o publicar su desaparición.
+                  <p>Proyecto creado con angular para realizar publicaciones ya sea para poner en adopción a una mascota
+                    o publicar su desaparición.
                   </p>
                   <p>La aplicación cuenta con funciones como:</p>
                   <ul>
@@ -314,14 +320,15 @@ reales.
 
                   <div class="row">
                     <div class="col">
-                  <p>Repositorio Github del proyecto: </p>
-                </div>
-                <div class="col">
-                  <a href="https://github.com/AdoptMeYa/AdoptMeFront" target="_blank">
-                    <img src="https://angular.io/assets/images/logos/angular/angular.png" alt="Icono de Angular" width="32" height="32">
-                  </a>
-                </div>
-                </div>
+                      <p>Repositorio Github del proyecto: </p>
+                    </div>
+                    <div class="col">
+                      <a href="https://github.com/AdoptMeYa/AdoptMeFront" target="_blank">
+                        <img src="https://angular.io/assets/images/logos/angular/angular.png" alt="Icono de Angular"
+                          width="32" height="32">
+                      </a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -335,7 +342,8 @@ reales.
                 <div class="text-muted text-small mb-2">Diciembre, 2021
                 </div>
                 <div>
-                  <p>Formulario Web, desarrollado con Vue y el lenguaje Go, para predecir la probabilidad de estar infectado de Covid-19 basado en data historica recopilada por el gobierno del Perú.</p>
+                  <p>Formulario Web, desarrollado con Vue y el lenguaje Go, para predecir la probabilidad de estar
+                    infectado de Covid-19 basado en data historica recopilada por el gobierno del Perú.</p>
                   <p>Para ello se uso el algoritmo Random Forest, Docker y Maquins Virtuales de Azure</p>
                   <p>El formulario consiste de marcar checkbox para saber si el usuario tiene sintomas como:</p>
                   <ul>
@@ -343,17 +351,21 @@ reales.
                     <li>Dolor de garganta</li>
                     <li>Dolor muscular</li>
                   </ul>
-                  Al dar click en el boton "Diagnosticar", la aplicación dirá si el usuario seria negativo o positivo de covid-19
+                  <p>
+                    Al dar click en el boton "Diagnosticar", la aplicación dirá si el usuario seria negativo o positivo
+                    de covid-19
+                  </p>
                   <div class="row">
                     <div class="col">
-                  <p>Repositorio Github del proyecto: </p>
-                </div>
-                <div class="col">
-                  <a href="https://github.com/tf-concurrencia/C19-DetectFrontend" target="_blank">
-                    <img src="https://blog.golang.org/go-brand/Go-Logo/PNG/Go-Logo_Aqua.png" height="32" width="32" alt="Icono de Go">
-                  </a>
-                </div>
-                </div>
+                      <p>Repositorio Github del proyecto: </p>
+                    </div>
+                    <div class="col">
+                      <a href="https://github.com/tf-concurrencia/C19-DetectFrontend" target="_blank">
+                        <img src="https://blog.golang.org/go-brand/Go-Logo/PNG/Go-Logo_Aqua.png" height="32" width="32"
+                          alt="Icono de Go">
+                      </a>
+                    </div>
+                  </div>
 
                 </div>
               </div>
@@ -394,10 +406,13 @@ reales.
                 <div class="h5 mb-1">Scrum Fundamentals Certified (SFC)
                   SCRUMstudy - Accreditation Body for
                   Scrum and Agile
-                   <span class="text-muted h6">de
-                    SCRUMstudy</span></div>
+                  <span class="text-muted h6">de
+                    SCRUMstudy</span>
+                </div>
                 <div class="text-muted text-small mb-2">Junio, 2022</div>
-                <div>Scrum Fundamentals Certified course is tailored to help anyone interested to know more about Scrum; learn about key concepts in Scrum as defined in the SBOK® Guide; and to get a basic understanding of how Scrum framework works in delivering successful projects.</div>
+                <div>Scrum Fundamentals Certified course is tailored to help anyone interested to know more about Scrum;
+                  learn about key concepts in Scrum as defined in the SBOK® Guide; and to get a basic understanding of
+                  how Scrum framework works in delivering successful projects.</div>
               </div>
             </div>
           </div>
