--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="col-md-6">
               <h2 class="h3 mb-3">Objetivo</h2>
               <p>
-                Busco oportunidades de prácticas preprofesionales como Data Scientist, donde pueda aplicar mis sólidos conocimientos teóricos y prácticos en análisis de datos, machine learning y estadísticas en proyectos reales. Mi objetivo es contribuir significativamente al equipo mientras continúo desarrollando mis habilidades y conocimientos en el campo de la ciencia de datos.
+                Busco trabajo como Data Scientist, donde pueda aplicar mis sólidos conocimientos teóricos y prácticos en análisis de datos, machine learning y estadísticas en proyectos reales. Mi objetivo es contribuir significativamente al equipo mientras continúo desarrollando mis habilidades y conocimientos en el campo de la ciencia de datos.
               </p>
             </div>
             <div class="col-md-6">
