--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@ href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Robot
 <p data-aos="fade-left" data-aos-delay="100">
 Profesional apasionado por transformar datos en insights accionables. Con experiencia práctica
 en análisis de datos, desarrollo de modelos predictivos y creación de dashboards, me destaco por mi
-capacidad de aprendizaje rápido y trabajo en equipo. Mis proyectos abarcan desde aplicaciones en el
-sector financiero hasta soluciones de chatbot basadas en modelos de lenguaje natural.
+capacidad de aprendizaje rápido y trabajo en equipo. Mis proyectos abarcan desde aplicaciones como modelado de datos, análisis de datos, web scraping, administración de servidores y contenedores linux.
 </p>
 </div>
 </div>
@@ -192,15 +191,18 @@ style="width: 100%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></d
 <div class="timeline-card timeline-card-primary card shadow-sm">
 <div class="card-body">
 <div class="h5 mb-1">
-Data Scientist <span class="text-muted h6">en Smart Boss S.A.C</span>
+Data Scientist <span class="text-muted h6">en Ideas Diferentes S.A.C</span>
 </div>
-<div class="text-muted text-small mb-2">Agosto 2024 – Actualidad</div>
+<div class="text-muted text-small mb-2">Abril 2024 – Actualidad</div>
 <div>
 <ul>
-<li>Desarrollé y entrené modelos de machine learning (por ejemplo, un modelo de propensión) para optimizar decisiones en el sector financiero, utilizando datos del Reporte Crediticio Consolidado (RCC) de la SBS.</li>
-<li>Implementé visualización y monitoreo de datos a través de Apache Superset y Grafana, mejorando la supervisión en el servidor SQL.</li>
-<li>Realicé web scraping de diversas fuentes (Colegio Médico, Colegio de Arquitectos, SUNEDU, inmobiliarias, etc.) para enriquecer bases de datos.</li>
-<li>Colaboré con clientes del sector financiero (bancos, cajas municipales, financieras) para mejorar la toma de decisiones.</li>
+<li>Desarrollé y entrené modelos de machine learning (por ejemplo, un modelo de propensión) para optimizar decisiones en el sector financiero, utilizando datos financieros como saldos y deudas de parte del Reporte Crediticio Consolidado (RCC) de la Superintendencia de Banca y Seguros del Perú (SBS) del Perú. Con el fin de encontrar los clientes más propensos a realizar un desembolso de un préstamo o línea de credito.</li>
+&nbsp;
+<li>Implementé herramientas de visualización y monitoreo de datos instalando y configurando Apache Superset y Grafana, lo que mejoró la supervisión y análisis de consultas en el servidor SQL.</li>
+&nbsp;
+<li>Realicé web scraping de diversas fuentes (Colegio Médico del Perú, Colegio de Arquitectos, SUNEDU, inmobiliarias y otros sitios web) para enriquecer bases de datos y aportar información adicional para análisis.</li>
+&nbsp;
+<li>Colaboré en proyectos para clientes del sector financiero (bancos, cajas municipales, financieras), apoyando la toma de decisiones a través de insights basados en datos obtenidos de la SBS.</li>
 </ul>
 </div>
 </div>
@@ -213,12 +215,19 @@ Data Scientist <span class="text-muted h6">en Smart Boss S.A.C</span>
 <div class="h5 mb-1">
 Programador TI <span class="text-muted h6">en Radar 365 (Grupo Vega)</span>
 </div>
-<div class="text-muted text-small mb-2">Mayo 2023 – Diciembre 2023</div>
+<div class="text-muted text-small mb-2">Enero 2023 – Diciembre 2023</div>
 <div>
 <ul>
-<li>Desarrollé chatbots utilizando modelos de lenguaje natural a través de la API de OpenAI, mejorando la atención al cliente.</li>
-<li>Realicé pruebas de concepto de chatbot de forma autónoma, demostrando mi capacidad de autoaprendizaje.</li>
-<li>Implementé servicios en la nube con Azure, optimizando la infraestructura y escalabilidad.</li>
+<li>Desarrollé el chatbot VegaChat utilizando modelos de lenguaje natural con la API de OpenAI para Q&A sobre la aplicación móvil  V-Maps de la propia empresa, para automatizar las consultas de los clientes y bajarle la carga a los desarrolladores.</li>
+&nbsp;
+
+<li>Automatice la descarga de archivos adjuntos de correos a la pc personal de gerencia.</li>
+&nbsp;
+
+<li>Desarrolle un chatbot que pueda leer los documentos de una carpeta para “conversar” con el chatbot de aquellos documentos y poder hacer resúmenes.</li>
+&nbsp;
+
+<li>Implementé servicios de Azure cloud, puntualmente para Vision Computacional y un OCR para unirlos junto al chatbot VegaChat para poder reconocer ciertos elementos de imágenes y leer texto.</li>
 </ul>
 </div>
 </div>
@@ -231,76 +240,20 @@ Programador TI <span class="text-muted h6">en Radar 365 (Grupo Vega)</span>
 <div class="h5 mb-1">
 Desarrollador Web Fullstack <span class="text-muted h6">en TBS Perú SAC</span>
 </div>
-<div class="text-muted text-small mb-2">Febrero 2022 – Julio 2022</div>
+<div class="text-muted text-small mb-2">Enero 2022 – Julio 2022</div>
 <div>
 <ul>
-<li>Participé en el desarrollo de aplicaciones web fullstack utilizando Angular y Spring Boot para clientes destacados (por ejemplo, Movistar).</li>
-<li>Aprendí y apliqué diversas tecnologías como OracleSQL, AngularJS, Docker y Jenkins de forma autodidacta.</li>
-<li>Gestioné contenedores en Linux y modelé bases de datos SQL garantizando integridad y eficiencia en el manejo de datos.</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-<hr class="d-print-none" />
+<li>Participé en el desarrollo de aplicaciones web fullstack para clientes destacados (principalmente Movistar) utilizando Angular y Spring Boot.</li>
+&nbsp;
 
-<!-- SECTION: Proyectos Personales -->
-<div class="project-section px-3 px-lg-4">
-<h2 class="h3 mb-4" id="project">Proyectos Personales</h2>
-<!-- Proyecto 1 -->
-<div class="timeline">
-<div class="timeline-card timeline-card-primary card shadow-sm">
-<div class="card-body">
-<div class="h5 mb-1">Análisis de Retención de Clientes en la Industria Bancaria</div>
-<div>
-<p>Exploré datos bancarios para identificar factores clave en la retención de clientes, aplicando técnicas de machine learning y análisis exploratorio.</p>
-<div class="row">
-<div class="col">
-<p>Repositorio Github:</p>
-</div>
-<div class="col">
-<a href="https://github.com/BrujitoOz/Data-Science/blob/master/Data%20Analytics/ChurningCase.ipynb" target="_blank">Ver en GitHub</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- Proyecto 2 -->
-<div class="timeline">
-<div class="timeline-card timeline-card-primary card shadow-sm">
-<div class="card-body">
-<div class="h5 mb-1">Análisis de Reservas de Hoteles</div>
-<div>
-<p>Analicé datos de reservas hoteleras para identificar patrones y optimizar la ocupación y servicios en el sector.</p>
-<div class="row">
-<div class="col">
-<p>Repositorio Github:</p>
-</div>
-<div class="col">
-<a href="https://github.com/BrujitoOz/Data-Science/blob/master/Data%20Analytics/HotelBookingAnalytics.ipynb" target="_blank">Ver en GitHub</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- Proyecto 3 -->
-<div class="timeline">
-<div class="timeline-card timeline-card-primary card shadow-sm">
-<div class="card-body">
-<div class="h5 mb-1">Análisis de Ventas de Amazon</div>
-<div>
-<p>Utilicé técnicas de machine learning y análisis de datos para identificar patrones de compra y mejorar la toma de decisiones comerciales en Amazon.</p>
-<div class="row">
-<div class="col">
-<p>Repositorio Github:</p>
-</div>
-<div class="col">
-<a href="https://github.com/BrujitoOz/Data-Science/blob/master/Data%20Analytics/AmazonSaleReportAnalytics.ipynb" target="_blank">Ver en GitHub</a>
-</div>
-</div>
+<li>Aprendí y apliqué nuevas tecnologías (por ejemplo, OracleSQL, AngularJS, Docker, Jenkins) de forma autodidacta demostrando capacidad de adaptación.</li>
+&nbsp;
+
+<li>Gestioné contenedores con Docker en servidores Linux, permitiendo un despliegue más rápido y fiable de las aplicaciones.</li>
+&nbsp;
+
+<li>Modelé bases de datos SQL para asegurar la integridad y eficiencia en el manejo de datos.</li>
+</ul>
 </div>
 </div>
 </div>
